ajout sélection transition + générique

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -18,7 +18,7 @@
     </div>
     <div class="jumbotron mt-4">
       <div class="row justify-content-center">
-        <h1>Télécommand Admin</h1>
+        <h1>Télécommande Admin</h1>
       </div>
       <div class="row mt-4">
         <div class="col-lg-4 col-sm-6 text-center">
@@ -34,7 +34,12 @@
         </div>
       </div>
       <div class="row justify-content-center mt-4">
-        <input class="btn btn-success btn-lg mr-2" type="button" value="Transition Suivante" id="button-next-transition" />
+        <input class="btn btn-success btn-lg mr-2" type="button" value="Générique" id="button-transition-1" />
+        <input class="btn btn-success btn-lg mr-2" type="button" value="Nuggets" id="button-transition-2" />
+        <input class="btn btn-success btn-lg mr-2" type="button" value="Sel ou Poivre" id="button-transition-3" />
+        <input class="btn btn-success btn-lg mr-2" type="button" value="Les menus" id="button-transition-4" />
+        <input class="btn btn-success btn-lg mr-2" type="button" value="L'addition" id="button-transition-5" />
+        <input class="btn btn-success btn-lg mr-2" type="button" value="Burger de la mort" id="button-transition-6" />
       </div>
       <div class="row justify-content-center mt-4">
         <input class="btn btn-success btn-lg mr-2" type="button" value="Débloquer buzzer" id="button-unlock-buzz" />
